deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddash
  labels:
    app: ddash
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ddash
  template:
    metadata:
      name: ddash
      labels:
        app: ddash
    spec:
      containers:
        - image: gcr.io/robotic-fuze-194312/ddash:v0.0.2
          name: ddash
          ports:
            - containerPort: 80
              protocol: TCP
