deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddash
spec:
  selector:
    app: ddash
  ports:
    - port: 80
