deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ddash
spec:
  rules:
  - host: duara.io.10.0.0.2.xip.io
    http:
      paths:
      - backend:
          serviceName: ddash
          servicePort: 80
        path: /
